v0.1.0/_sources/projections/azim/azim_equidistant.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_azim_azim_equidistant.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_projections_azim_azim_equidistant.py:


Azimuthal Equidistant
=====================

The main advantage of this projection is that distances from the projection
center are displayed in correct proportions. Also directions measured from the
projection center are correct. It is very useful for a global view on locations
that lie within a certain distance or for comparing distances of different
locations relative to the projection center.

``elon0/lat0[/horizon]/scale`` or ``Elon0/lat0[/horizon]/width``

``lon0/lat0`` specifies the projection center. The optional parameter
``horizon`` specifies the max distance to the projection center (i.e. the
visibile portion of the rest of the world map) in degrees <= 180° (default 180°).



.. image:: /projections/azim/images/sphx_glr_azim_equidistant_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|


.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(projection="E-100/40/4.5i", region="g", frame="g", land="gray")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.098 seconds)


.. _sphx_glr_download_projections_azim_azim_equidistant.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: azim_equidistant.py <azim_equidistant.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: azim_equidistant.ipynb <azim_equidistant.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
